--- a/red-ranger/package.json
+++ b/red-ranger/package.json
@@ -13,12 +13,14 @@
     "@nuxt/devtools": "latest",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.8.1",
+    "nuxt-headlessui": "^1.1.4",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "maplibre-gl": "^3.6.1"
+    "maplibre-gl": "^3.6.1",
+    "nuxt-swiper": "^1.2.2"
   }
 }
