--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
+    "@nuxt/devtools": "^2.4.0",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.8.1",
     "nuxt-headlessui": "^1.1.4",
